# ansible_irp

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .yamllint.yaml  Dockerfile  Jenkinsfile-staging  _asserts.yaml  _clickhouse_backup.yaml  _clickhouse_backup_restore_test.yaml  agent_bgp_push.yaml  agents.yaml  agents_validate.yaml  ansible.cfg  central.yaml  clickhouse_mirror.yaml  clickhouse_restore.yaml  databases.yaml  dns_update.yaml  docker_prepare.sh  get_agents_inventory.yaml  get_bgp_push_inventory.yaml  get_mitigation_inventory.yaml  hosts_prepare.yaml  infra-firewall.yaml  k8s_app.yaml  k8s_databases.yaml  k8s_deploy.yaml  k8s_lb.yaml  k8s_postgres.yaml  k8s_user_certs.yaml  local_repo.yaml  metrics.yaml  pyproject.toml  requirements.txt  requirements.yaml  roi-exporter.yaml  scrubbing.yaml  secscan.yaml  set_grafana_password.yaml  site.yaml  (+5 more)
docs/: agent_roles_workflow.md  ip_management.md  recovery.md  security.md  update.md
files/: central-nginx-selfsigned.crt  central-nginx-selfsigned.key
inventories/: k8s-dev.yaml  k8s-staging-central.yaml  pg_backup_test.yaml  production-central.yaml  production-infra.yaml  production-metrics.yaml  production-scrubbing.yaml  production-secscan.yaml  production-stations.yaml  staging-central.yaml  staging-infra.yaml  staging-stations.yaml
inventories/group_vars/: all.yml  apt.yaml  bgp_pull.yaml  clickhouse.yaml  k8s_dev.yaml  k8s_staging.yaml  (+3 more)
releasenotes/: config.yaml
rnd/: activate  deactivate
templates/: nginx_aptly.j2  nginx_conductor_bgp_feed.j2  nginx_quality_solver.j2  nginx_reborn.j2  nginx_reborn_dev.j2
(+210 files in other folders)
